Update auto_cfg_rmq.sh
little update